⚠ Added authentication to respective routes
