# swagger_output.json
@@ -54,35 +54,22 @@
         }
       }
     },
-    "/users/signup": {
-      "post": {
+    "/users/": {
+      "get": {
         "tags": [
-          "User"
+          "user"
         ],
-        "description": "Endpoint to register a new user.",
+        "description": "Endpoint to retrieve a list of all users.",
         "parameters": [
           {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "username": {
-                  "example": "any"
-                },
-                "password": {
-                  "example": "any"
-                },
-                "role": {
-                  "example": "any"
-                }
-              }
-            }
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
-          "201": {
-            "description": "Created"
+          "200": {
+            "description": "OK"
           },
           "401": {
             "description": "Unauthorized"
@@ -138,7 +125,7 @@
     "/users/refresh-token": {
       "post": {
         "tags": [
-          "User"
+          "user"
         ],
         "description": "Endpoint to refresh access token.",
         "parameters": [
@@ -171,7 +158,7 @@
     "/users/logout": {
       "post": {
         "tags": [
-          "User"
+          "user"
         ],
         "description": "Endpoint to log out a user.",
         "parameters": [
@@ -201,10 +188,10 @@
         }
       }
     },
-    "/users/admin/users": {
+    "/users/users": {
       "get": {
         "tags": [
-          "admin"
+          "user"
         ],
         "description": "Endpoint to retrieve a list of all users.",
         "responses": {
@@ -399,6 +386,100 @@
           },
           "500": {
             "description": "Failed to create clean sheets for teams."
+          }
+        }
+      }
+    },
+    "/admin/user": {
+      "post": {
+        "tags": [
+          "admin"
+        ],
+        "description": "Endpoint to register a new user.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                },
+                "role": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "patch": {
+        "tags": [
+          "admin"
+        ],
+        "description": "Endpoint\r  //",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "example": "any"
+                },
+                "username": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                },
+                "role": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
